Scenarios/CosmosDB-nosql-Resiliency/k8s/dataprep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataprep-deployment
  namespace: simpleecom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dataprep
  template:
    metadata:
      labels:
        app: dataprep
    spec:
      containers:
      - name: dataprep
        image: <acr-name>.azurecr.io/dataprep:v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: dataprep
  namespace: simpleecom
spec:
  selector:
    app: dataprep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
