Scenarios/CosmosDB-nosql-Resiliency/k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: simpleecom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: serversa
      containers:
      - name: orders
        image: akssupportingxaz2lgqe2tj3o.azurecr.io/orders:v1
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: orders
  namespace: simpleecom
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
