Scenarios/CosmosDB-nosql-Resiliency/k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: simpleecom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: serversa
      containers:
      - name: products
        image: akssupportingxaz2lgqe2tj3o.azurecr.io/products:v1
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: simpleecom
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8084
  type: ClusterIP
